--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,7 +1,9 @@
 version: '3'
 services:
   app:
-    image: elixir
+    build:
+      context: .
+      dockerfile: Dockerfile
     ports:
       - 4000
     links:
